--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,11 +14,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Biblioteca"
         tools:targetApi="31">
-
-        <activity android:name=".Favorites">
-
-        </activity>
-
+        <activity
+            android:name=".RegisterActivity"
+            android:exported="false" />
+        <activity android:name=".Favorites"></activity>
         <activity
             android:name=".MainActivity"
             android:exported="false" />
